# gstreamer-ximage-rockchip

./: Makefile  Makefile.in  autogen.sh  config.h  config.status  configure  configure.ac  gst-plugins-base.spec  libtool  make.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
common/: Makefile  Makefile.in
docs/: Makefile  Makefile.in  version.entities
ext/: Makefile  Makefile.in
gst/: Makefile  Makefile.in
gst-libs/: Makefile  Makefile.in
m4/: Makefile  Makefile.in
pkgconfig/: Makefile  Makefile.in  gstreamer-allocators-uninstalled.pc  gstreamer-allocators.pc  gstreamer-app-1.0.pc  gstreamer-app-uninstalled.pc  gstreamer-audio-1.0.pc  gstreamer-audio-uninstalled.pc  gstreamer-fft-uninstalled.pc  gstreamer-fft.pc  gstreamer-pbutils-1.0.pc  gstreamer-pbutils-uninstalled.pc  gstreamer-plugins-base-1.0-uninstalled.pc  gstreamer-plugins-base.pc  gstreamer-riff-1.0-uninstalled.pc  gstreamer-riff-1.0.pc  gstreamer-rtp-uninstalled.pc  gstreamer-rtp.pc  gstreamer-rtsp-1.0-uninstalled.pc  gstreamer-rtsp-1.0.pc  gstreamer-sdp-1.0-uninstalled.pc  gstreamer-sdp-1.0.pc  gstreamer-tag-1.0-uninstalled.pc  gstreamer-tag-1.0.pc  (+2 more)
sys/ximage/: Makefile  Makefile.am  Makefile.in  gstvpumeta.c  libgstximagesink.la  libgstximagesink_la-gstkmsutils.lo  libgstximagesink_la-gstvpumeta.lo  ximagesink.c  ximagesink.h
sys/ximage/.deps/: libgstximagesink_la-gstkmsutils.Plo  libgstximagesink_la-gstvpumeta.Plo  libgstximagesink_la-ximage.Plo  libgstximagesink_la-ximagepool.Plo  libgstximagesink_la-ximagesink.Plo
sys/ximage/.libs/: libgstximagesink.lai  libgstximagesink.soT
(+515 files in other folders)
